# bric-a-brac

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  mise.toml
ai/: Cargo.toml  Dockerfile  README.md  compose.server.yaml  mise.toml
ai/src/: lib.rs  main.rs
ai/src/application/: error.rs  errors.rs  mod.rs
ai/src/application/services/: agent_error.rs  agent_service.rs  chunking.rs  data_service.rs  mod.rs  prompt.rs  schema_service.rs  tool_executor.rs  tools.rs
ai/src/config/: metadata_server.rs  mod.rs  openrouter.rs
ai/src/infrastructure/: error.rs  errors.rs  http_retry.rs  mod.rs
ai/src/infrastructure/clients/: embedding_client.rs  knowledge_client.rs  metadata_client.rs  mod.rs  openrouter_client.rs
ai/src/infrastructure/config/: ai_server_config.rs  knowledge_server_config.rs  metadata_server_config.rs  mod.rs  openrouter_config.rs
ai/src/presentation/: error.rs  mod.rs  service.rs  tracing.rs
ai/src/presentation/errors/: app_error.rs  mod.rs  tonic_error.rs
ai/src/presentation/grpc/: ai_service.rs  mod.rs
crates/bric-a-brac-dtos/: Cargo.toml  README.md
crates/bric-a-brac-dtos/src/: error.rs  lib.rs  openapi.rs  utils.rs
crates/bric-a-brac-dtos/src/dtos/: access_dto.rs  agent_event_dto.rs  edge_data_dto.rs  edge_schema_dto.rs  graph_data_dto.rs  graph_dto.rs  graph_schema_dto.rs  mod.rs  node_data_dto.rs  node_schema_dto.rs  primitives.rs  property_data_dto.rs  property_schema_dto.rs  schema_compliance.rs  session_dto.rs  user_dto.rs
crates/bric-a-brac-id/: Cargo.toml  README.md
crates/bric-a-brac-id/src/: lib.rs
crates/bric-a-brac-protos/: .gitignore  Cargo.toml  README.md  build.rs
crates/bric-a-brac-protos/protos/: ai.proto  common.proto  knowledge.proto  metadata.proto
crates/bric-a-brac-protos/src/: auth.rs  client.rs  error.rs  lib.rs  server.rs  tracing.rs
knowledge/: .gitignore  Cargo.toml  Dockerfile  README.md  compose.db.yaml  compose.server.yaml  docker-compose.yml  mise.toml
knowledge/src/: config.rs  database.rs  db.rs  error.rs  grpc.rs  lib.rs  main.rs  models.rs  server.rs  service.rs
knowledge/src/application/: error.rs  errors.rs  mod.rs
knowledge/src/application/dtos/: edge_data_dto.rs  graph_data_dto.rs  graph_dto.rs  mod.rs  node_data_dto.rs  property_data_dto.rs
knowledge/src/application/services/: mod.rs  mutate_service.rs  query_service.rs
knowledge/src/config/: knowledge_db.rs  knowledge_db_config.rs  knowledge_server.rs  mod.rs
knowledge/src/domain/models/: edge_data_model.rs  graph_data_model.rs  mod.rs  node_data_model.rs  property_data_model.rs
knowledge/src/domain/utils/: extend_element.rs  mod.rs  validation.rs
knowledge/src/infrastructure/: database.rs  error.rs  errors.rs  mod.rs
knowledge/src/infrastructure/config/: knowledge_db_config.rs  knowledge_server_config.rs  mod.rs
knowledge/src/infrastructure/repositories/: mod.rs  mutate_repository.rs  query_repository.rs
knowledge/src/presentation/: error.rs  mod.rs  service.rs  tracing.rs
knowledge/src/presentation/errors/: app_error.rs  mod.rs  tonic_error.rs
knowledge/src/presentation/grpc/: knowledge_service.rs  mod.rs
knowledge/src/repositories/: mod.rs
knowledge/src/services/: mod.rs
metadata/: Cargo.toml  Dockerfile  README.md  compose.db.yaml  compose.server.yaml  mise.toml
metadata/examples/: print-openapi.rs
metadata/migrations/: 20260130112820_setup.down.sql  20260130112820_setup.up.sql  20260407101506_seed.down.sql  20260407101506_seed.up.sql
metadata/src/: config.rs  conversions.rs  database.rs  dto.rs  error.rs  extractors.rs  grpc_client.rs  handlers.rs  lib.rs  main.rs  models.rs  repositories.rs  router.rs  routes.rs  seed.rs  state.rs
metadata/src/application/: error.rs  errors.rs  mod.rs
metadata/src/application/dtos/: access_dto.rs  ai_dto.rs  document_dto.rs  edge_data_dto.rs  edge_schema_dto.rs  graph_dto.rs  graph_schema_dto.rs  mod.rs  node_data_dto.rs  node_schema_dto.rs  property_data_dto.rs  property_schema_dto.rs  session_dto.rs  user_dto.rs
metadata/src/application/services/: access_service.rs  ai_service.rs  chat_service.rs  document_service.rs  file_extraction.rs  graph_service.rs  mod.rs  session_service.rs  user_service.rs  validation_service.rs
metadata/src/clients/: knowledge.rs  knowledge_client.rs  mod.rs
metadata/src/config/: knowledge_server.rs  knowledge_server_config.rs  metadata_db.rs  metadata_db_config.rs  metadata_server.rs  metadata_server_config.rs  mod.rs
metadata/src/domain/models/: access_model.rs  edge_data_model.rs  edge_schema_model.rs  graph_model.rs  graph_schema_model.rs  mod.rs  node_data_model.rs  node_schema_model.rs  property_data_model.rs  property_schema_model.rs  session_document_model.rs  session_message_model.rs  session_model.rs  user_model.rs
metadata/src/domain/utils/: generate_key.rs  mod.rs
metadata/src/dtos/: access_dto.rs  graph_dto.rs  mod.rs  user_dto.rs
metadata/src/dtos/common/: access.rs  mod.rs
metadata/src/dtos/requests/: access.rs  graph.rs  mod.rs  user.rs
metadata/src/dtos/responses/: access.rs  graph.rs  mod.rs  user.rs
metadata/src/handlers/: access.rs  access_handler.rs  graph.rs  graph_handler.rs  mod.rs  user.rs  user_handler.rs
metadata/src/infrastructure/: database.rs  error.rs  errors.rs  mod.rs
metadata/src/infrastructure/clients/: ai_client.rs  grpc_client.rs  knowledge_client.rs  mod.rs
metadata/src/infrastructure/config/: ai_server_config.rs  mod.rs  (+3 more)
metadata/src/models/: access.rs  access_model.rs  edge_data_model.rs  edge_schema.rs  graph.rs  graph_model.rs  mod.rs  node_data_model.rs  node_schema_model.rs  property_model.rs  user.rs  user_model.rs
metadata/src/presentation/: error.rs  extractors.rs  grpc.rs  mod.rs  openapi.rs  router.rs  state.rs  tracing.rs
metadata/src/repositories/: access.rs  access_repository.rs  graph.rs  graph_repository.rs  mod.rs  user.rs  user_repository.rs
metadata/src/services/: access.rs  access_service.rs  graph.rs  graph_service.rs  mod.rs  user.rs  user_service.rs  validation.rs  validation_service.rs
metadata/tests/: postman-collection.json
(+239 files in other folders)
