[package]
name = "ai"
version.workspace = true
edition.workspace = true

[dependencies]
bric-a-brac-id = { workspace = true }
bric-a-brac-protos = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true, features = ["debug", "display"] }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
