[package]
name = "ai"
version.workspace = true
edition.workspace = true

[dependencies]
bric-a-brac-id = { workspace = true }
bric-a-brac-protos = { workspace = true }
bric-a-brac-dtos = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true, features = ["debug", "display"] }
futures-util = { workspace = true }
http = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "v7"] }
validator = { workspace = true }

[lints]
workspace = true
