[package]
name = "knowledge"
version.workspace = true
edition.workspace = true

[dependencies]
bric-a-brac-protos = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true, features = ["debug"] }
neo4rs = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tonic = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
