[package]
name = "metadata"
version.workspace = true
edition.workspace = true
default-run = "metadata"

[dependencies]
bric-a-brac-id = { workspace = true }
bric-a-brac-protos = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true, features = ["debug", "display"] }
prost = { workspace = true }
regex = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors", "request-id"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
validator = { workspace = true, features = ["derive"] }

[lints]
workspace = true
