[package]
name = "bric-a-brac-protos"
version.workspace = true
edition.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display"] }
http = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints.rust]
unsafe_code = "deny"
